[package]
authors = ["Ben Ruijl <benruyl@gmail.com>"]
edition = "2018"
name = "lorentz_vector"
version = "0.1.3"

[features]
hyperdual_support = ["hyperdual"]
pyo3_support = ["pyo3"]
serde_support = ["serde"]
f128_support = ["f128"]
cpython_support = ["cpython"]

[dependencies.pyo3]
optional = true
version = "0.13"

[dependencies.cpython]
optional = true
version = "0.5"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0"

[dependencies.hyperdual]
git = "https://gitlab.com/benruijl/hyperdual"
optional = true

[dependencies.f128]
git = "https://github.com/benruijl/f128"
optional = true

[dependencies]
num = "0.3"
